--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ clap = { version = "3.2", features = ["derive", "wrap_help"] }
 tempfile = "3"
 rayon = "1.5"
 lscolors = "0.12"
+unix_mode = "0.1.3"
 users = "0.11.0"
