Add display of file sizes
Display the size of a file in bytes using the `sizes` option.
Additionally add an option `humansize` to display the size better
readable in KiB, MiB and so on. Use the crate `humansize` for that,
since this crate ships with a formatter option, that can easily be
changed to use SI units later.

Signed-off-by: SteveCharleston <steven@schalhorn.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 ansi_term = "0.12"
 clap = { version = "3.2", features = ["derive", "wrap_help"] }
+humansize = "2.1"
 tempfile = "3"
 rayon = "1.5"
 lscolors = "0.12"
