--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,14 @@ edition = "2021"
 [dependencies]
 ansi_term = "0.12"
 clap = { version = "3.2", features = ["derive", "wrap_help"] }
+duct = "0.13"
 globset = "0.4"
 humansize = "2.1"
 pretty_assertions = "1.3"
 tempfile = "3"
 rayon = "1.5"
 lscolors = "0.12"
+shell-words = "1.1"
 tree_magic = "0.2"
 unix_mode = "0.1.3"
 users = "0.11.0"
